<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_grant_access"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dialog_grant_access"
        android:paddingHorizontal="@dimen/margin_40dp"
        android:paddingVertical="@dimen/padding28"
        tools:context=".ui.main.splash.GrantAccessDialog">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_grant_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_access"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_grant_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_medium"
            android:text="@string/grant_access"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/text28"
            android:layout_marginVertical="@dimen/margin_12dp"
            app:layout_constraintTop_toBottomOf="@id/iv_grant_access"
            app:layout_constraintBottom_toTopOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_grant_access"
            android:textColor="@color/black"
            android:textSize="@dimen/text20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineCenter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_allow_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin24"
            android:background="@drawable/background_button_allow"
            android:fontFamily="@font/mulish_medium"
            android:paddingVertical="@dimen/margin_12dp"
            android:text="@string/text_allow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text20"
            android:layout_marginTop="@dimen/margin_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content_access" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
