<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:clickable="true"
        android:id="@+id/csl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_select_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_layout_add_text"
            android:background="@color/bg_edit"
            app:layout_constraintBottom_toTopOf="@id/layout_edit_text">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_layout_filter"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_add_text"
                android:fontFamily="@font/mulish_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/size10dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="@dimen/text14"
                android:textStyle="normal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_edit_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_edit_font"
                android:fontFamily="@font/mulish_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/size10dp"
                android:text="@string/font"
                android:textColor="@color/white"
                android:textSize="@dimen/text14"
                android:textStyle="normal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_layout_filter"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_edit_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_edit_color_text"
                android:fontFamily="@font/mulish_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/size10dp"
                android:text="@string/color"
                android:textColor="@color/white"
                android:textSize="@dimen/text14"
                android:textStyle="normal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_edit_bg_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_edit_background_text"
                android:fontFamily="@font/mulish_medium"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/size10dp"
                android:text="@string/bg_color"
                android:textColor="@color/white"
                android:textSize="@dimen/text14"
                android:textStyle="normal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <include
            android:id="@+id/layout_edit_text"
            layout="@layout/layout_edit_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>